# Musync

./: Cargo.toml
src/: helpers.rs  main.rs  spotify_helper.rs
src/models/: artist.rs  mod.rs  song.rs
