[package]
name = "Musync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.3"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
reqwest = { version="0.11.22", features = ["blocking", "json"]}
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version="1.33.0", featurs= ["full"]}
